--- a/assets/css/hyperpro_aug.css
+++ b/assets/css/hyperpro_aug.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* Body font Size */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -275,6 +274,7 @@ body .bat-wrapper {
   width: 100%;
   height: 100vh;
   background: url(/content/dam/glo-jp/korea-images/brand-pages/images/2024/pro_aug/kv.png) no-repeat center/cover;
+  /* background: url(/images/2024/pro_aug/kv.png) no-repeat center / cover; */
   position: relative;
 }
 .main__kv01 .inner {
@@ -308,8 +308,8 @@ body .bat-wrapper {
 .main__kv02 {
   width: 100%;
   height: 100vh;
+  /* background: url(/images/2024/pro_aug/kv_2.jpg) no-repeat center  / cover; */
   background: url(/content/dam/glo-jp/korea-images/brand-pages/images/2024/pro_aug/kv_2.jpg) no-repeat center/cover;
-  /* 애니메이션2 */
   position: absolute;
   top: 0;
   left: 0;
@@ -447,6 +447,7 @@ body .bat-wrapper {
 .event {
   width: 100%;
   background: url(/content/dam/glo-jp/korea-images/brand-pages/images/2024/pro_aug/event_bg.png) no-repeat center 100%/cover;
+  /* background: url(/images/2024/pro_aug/event_bg.png) no-repeat center 100% / cover; */
   padding: 5.2083vw 0 6.25vw;
   text-align: center;
   position: relative;
@@ -525,6 +526,9 @@ body .bat-wrapper {
   letter-spacing: -0.03em;
 }
 .event .title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-size: 4.0625vw;
   font-weight: 700;
   line-height: 1.3;
@@ -538,6 +542,28 @@ body .bat-wrapper {
 .event .title .text_deco:after {
   height: 0.2604vw;
   background-color: #4BACC6;
+}
+.event .title .wrap {
+  display: flex;
+  align-items: center;
+}
+.event .title .rolling {
+  width: 12.0417vw;
+  height: 5.3vw;
+  overflow: hidden;
+  margin: 0 1vw 0;
+  color: #4BACC6;
+  position: relative;
+  line-height: 1.2;
+}
+.event .title .rolling:after {
+  content: "";
+  width: 11.0417vw;
+  height: 0.2604vw;
+  background-color: #4BACC6;
+  position: absolute;
+  top: 5vw;
+  left: 0.5vw;
 }
 .event .btn {
   justify-content: center;
@@ -581,7 +607,7 @@ body .bat-wrapper {
       left: 1%;
       width: 2.3438vw;
       height: 2.3438vw;
-      background: url(/content/dam/glo-jp/korea-images/brand-pages/images/2024/pro_aug/ico_right.png) no-repeat center / contain;
+      background: url(/images/2024/pro_aug/ico_right.png) no-repeat center / contain;
       z-index: 2;
       cursor: pointer;
       transform: rotate(180deg);
@@ -650,6 +676,17 @@ body .bat-wrapper {
   background: url(/content/dam/glo-jp/korea-images/brand-pages/images/2024/pro_aug/ico_right.png) no-repeat center/contain;
   z-index: 2;
   cursor: pointer;
+}
+.ups .slider .btn_prev {
+  position: absolute;
+  top: 64%;
+  left: 1%;
+  width: 2.3438vw;
+  height: 2.3438vw;
+  background: url(/content/dam/glo-jp/korea-images/brand-pages/images/2024/pro_aug/ico_right.png) no-repeat center/contain;
+  z-index: 2;
+  cursor: pointer;
+  transform: rotate(180deg);
 }
 .ups .swiper-slide {
   text-align: center;
@@ -807,6 +844,7 @@ body .bat-wrapper {
   }
   .main__kv02 {
     background: url(/content/dam/glo-jp/korea-images/brand-pages/images/2024/pro_aug/kv_2_m.jpg) no-repeat center/cover;
+    /* background: url(/images/2024/pro_aug/kv_2_m.jpg)no-repeat center / cover; */
   }
   .main__kv02 .glo__logo {
     width: 20.8vw;
@@ -845,12 +883,11 @@ body .bat-wrapper {
   }
   .story__box {
     border-radius: 6vw;
-    padding: 93.6vw 0 8vw;
+    padding: 107.6vw 0 8vw;
   }
   .story__box .people {
     width: 100%;
     height: auto;
-    aspect-ratio: 1/1;
   }
   .story__box .dev {
     width: 32vw;
@@ -942,9 +979,20 @@ body .bat-wrapper {
     font-size: 3.7333vw;
   }
   .event .title {
+    flex-direction: column;
+    gap: 1vw 0;
     font-size: 10.6667vw;
     line-height: 1.3;
     margin-bottom: 13.3333vw;
+  }
+  .event .title .rolling {
+    width: 30.6667vw;
+    height: 13.5vw;
+  }
+  .event .title .rolling::after {
+    width: 30.6667vw;
+    top: 13vw;
+    height: 2vw;
   }
   .event .btn__rec {
     width: 74.6667vw;
